--- a/styles/base.css
+++ b/styles/base.css
@@ -1,10 +1,17 @@
-/* General Styles */
+
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
+    font-family: "Roboto", serif;
     padding: 0;
     background-color: #f9f9f9;
-    color: #333;
+    color: #000000;
+  }
+
+  h1 {
+    font-family: "Lato", serif;
+  }
+
+  h2, h3 {
+    font-family: "Fira Sans", serif;
   }
   
   header {
@@ -23,6 +30,7 @@ body {
     margin: 0 15px;
     text-decoration: none;
     font-weight: bold;
+    font-family: "Fira Sans", serif;
   }
   
   nav a:hover {
@@ -40,10 +48,10 @@ body {
   }
   
   .main-container {
-    display: flex; /* Ativa o layout flexbox */
-    justify-content: space-between; /* Espaçamento entre os itens */
-    gap: 20px; /* Espaçamento entre as colunas */
-    padding: 20px; /* Margem interna */
+    display: flex; 
+    justify-content: space-between; 
+    gap: 20px;
+    padding: 20px; 
     background-color: #f4f4f4;
     flex-wrap: wrap; 
   }
@@ -73,7 +81,7 @@ body {
     overflow: hidden; 
   }
   
-  section.resources h2 {
+  section.resources h4 {
     background-color: #003366;
     color: white;
     margin: -20px -20px 20px -20px;
@@ -81,6 +89,7 @@ body {
     text-align: center;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
+    font-family: "Fira Sans", serif;
   }
   
   section.resources ul {
