--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -1,6 +1,12 @@
 
+.lato-regular {
+  font-family: "Lato", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
-  font-family: 
+  font-family:
   margin: 0;
   padding: 0;
   background-color: #f9f9f9;
@@ -26,7 +32,7 @@ nav a {
 }
 
 nav a:hover {
-  text-decoration: underline;
+  text-decoration: overline;
 }
 
 .container {
