--- a/styles/place.css
+++ b/styles/place.css
@@ -18,12 +18,10 @@
 
   h1,
   h2 {
-    font-family: "Ubuntu", serif;
-    font-weight: 700;
-    font-style: normal;
-
+      font-family: "Ubuntu", sans-serif;
+      font-weight: 700;
+      font-style: normal;
   }
-  
   header {
     background-color: var(--main-bg);
     color: var(--white);
@@ -37,15 +35,14 @@
   }
   
   .hero {
-    position: relative; /* Define o contexto de posicionamento */
-    width: 100%; /* Garantir que o tamanho seja consistente */
-    height: auto;
-  }
+    position: relative;
+}
 
-  .hero img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
+.data {
+    position: absolute;
+    top: 0; 
+    left: 0; 
+    margin: 1rem; 
 }
   
   .info-box {
@@ -82,12 +79,8 @@
     background-color: var(--secondary-bg);
     color: var(--white);
     padding: 0.5rem;
-    margin: -1rem -1rem 1rem -1rem;
-    text-align: center;
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
-  }
-  
+    margin: -1rem -1rem 1rem;
+}
   .info-box ul {
     list-style-type: none;
     padding: 0;
@@ -117,4 +110,3 @@
     font-size: 1.5rem;
     margin-left: 0.5rem;
   }
-  
