--- a/styles/place.css
+++ b/styles/place.css
@@ -1,5 +1,5 @@
 :root {
-    --main-bg: rgb(177, 30, 30, 1);
+    --main-bg: rgba(177, 30, 30, 1);
     --secondary-bg: rgb(30, 129, 176);
     --white: rgb(238, 238, 228);
     --text-color: #000000;
