--- a/styles/place.css
+++ b/styles/place.css
@@ -46,6 +46,9 @@ header h1 {
 }
 
 .hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     position: relative;
 }
 
