--- a/styles/places-responsive.css
+++ b/styles/places-responsive.css
@@ -1,9 +1,14 @@
 @media (max-width: 768px) {
+    .hero {
+        display: flex;
+        flex-direction: column;
+        align-items: stretch; 
+    }
+
     .info-box.data,
     .info-box.weather {
-        position: relative;
-        margin: 1rem; 
-        width: calc(100% - 2rem); 
+        margin: 1rem;
+        width: 100%;
     }
 
     .info-box.weather {
@@ -11,7 +16,7 @@
     }
 
     .info-box.data {
-        order: 1; 
+        order: 1;
     }
 }
 
