--- a/styles/from-mobile.css
+++ b/styles/from-mobile.css
@@ -1,11 +1,15 @@
 *{
     padding: 0.5rem;
-    background-color: rgb(231, 251, 247);
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body{
+    background-color: gray;
+     font-family: "Inter", serif;
+}
+
 h1{
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     color: white;
     text-align: center;
     padding: 10px;
@@ -27,8 +31,8 @@ fieldset{
 }
 
 label {
-    display: block; /* Faz cada label ocupar 100% da largura disponível */
-    margin-bottom: 5px; /* Espaçamento entre os itens */
+    display: block;
+    margin-bottom: 5px; 
 }
 
 /* use reverse flexbox to take advantage of flex-direction: reverse */
@@ -84,9 +88,9 @@ label {
   
   footer{
     background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
+    color: white;
     text-align: center;
-    padding: 1px;
+    padding: 10px;
     width: 100%;
     max-width: 800px;
     border-radius: 1rem;
