--- a/styles/subject.css
+++ b/styles/subject.css
@@ -92,7 +92,7 @@ form {
 
 fieldset{
     margin: 10px;
-    padding: auto;
+    padding: 10px;
     border-radius: 5px;
     border-color: #e94560;
 }
